# CFGAA-NbodySim

./: .gitignore  CMakeLists.txt  README.md
docs/images/: NBodyParticleSim.drawio  NBodyUI.drawio
include/: appwindow.h  camera.h  controlbar.h  frameslider.h  renderwidget.h  vector3dspinbox.h
nbodysim/: CMakeLists.txt
nbodysim/include/: nbodyparticlesim.h  nbodyparticlesystem.h  octree.h  particle.h  particleframebuffer.h  particlerenderer.h
nbodysim/src/: nbodyparticlesim.cpp  nbodyparticlesystem.cpp  octree.cpp  particleframebuffer.cpp  particlerenderer.cpp
nbodysim/tests/: octreetests.cpp
resources/icons/: ICON-LICENSE
resources/shaders/: acceleratedupdateprocess.comp  particle.frag  particle.vert  updateprocess.comp
src/: appwindow.cpp  camera.cpp  controlbar.cpp  frameslider.cpp  main.cpp  renderwidget.cpp  vector3dspinbox.cpp
